2000-08-24  Tim Jenness  <timj@jach.hawaii.edu>

	* General.pm: Fix max() and min() with 0

2000-08-15  Tim Jenness  <timj@jach.hawaii.edu>

	* Basic.pm (orac_add_code_to_recipe): Check that ORAC_STATUS is in
	an assignment

	* Calib/SCUBA.pm (iscalsource): uc() returns '' when given undef!

2000-08-14  Tim Jenness  <timj@jach.hawaii.edu>

	* Calib/SCUBA.pm: Add support for wideband filter secondary
	calibrator fluxes.

2000-07-27  Tim Jenness  <timj@jach.hawaii.edu>

	* Calib/SCUBA.pm (tau): Add caching

2000-07-25  Tim Jenness  <timj@jach.hawaii.edu>

	* Group.pm (membertagset): Add tags system

	* Frame.pm (tagretrieve): Add tags system

2000-07-21  Tim Jenness  <timj@jach.hawaii.edu>

	* Calib/SCUBA.pm: Add support for BEAM and ARCSEC units in gain determination. 

2000-07-20  Tim Jenness  <timj@jach.hawaii.edu>

	* Frame/JCMT.pm (findfilters): Determine the FILT_N name correctly
	from the FILTER name (ie 850W from 850W:450W)

	* Display.pm (parse_file_defn): Force case insensitive id match
	(was doing half the job before and fialing to match _I)

2000-06-14  Tim Jenness  <timj@jach.hawaii.edu>

	* Basic.pm: Use Starlink::Versions

2000-05-25  Tim Jenness  <timj@jach.hawaii.edu>

	* Display/GAIA.pm (new): Add use_remote_gaia and special case kauwa 
	(launch): _launch_new_gaia and _open_gaia_socket are now methods
	(the latter now requires the object state)

2000-05-10  Tim Jenness  <timj@jach.hawaii.edu>

	* Display/GAIA.pm (send_to_gaia): Rewrite to be a lot cleaner code 
	(sorry Casey).
	(image): Relaunch GAIA if required. Create new clones if required.

2000-05-09  Tim Jenness  <timj@jach.hawaii.edu>

	* Frame/IRCAM2.pm (template): Zero pad numbers
	

2000-05-06  Tim Jenness  <t.jenness@jach.hawaii.edu>

	* Frame/IRCAM2.pm: Add

2000-05-04  Tim Jenness  <timj@jach.hawaii.edu>

	* Calib/CGS4.pm: Add rows to the calibration object 

2000-05-03  Tim Jenness  <timj@jach.hawaii.edu>

	* Index.pm (verify): Return immediately if name is not defined. 
