@@ -1,3 +1,7 @@
+2000-10-09  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* Basic.pm: Remove documentation for $KAPPA_* variables 
+
 2000-08-24  Tim Jenness  <timj@jach.hawaii.edu>
 
 	* General.pm: Fix max() and min() with 0
